samples/negative/level_fail.minitt
let error_type: \Sigma1 a: Type1. Type1 = Type0, Type0;
